Nambahin page yang aneh

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <li><a href="index.html">Halaman 1: HTML</a></li>
             <li><a href="page2-css.html">Halaman 2: CSS</a></li>
             <li><a href="page3-js.html">Halaman 3: JavaScript</a></li>
+            <li><a href="page4-chaos.html">Halaman 4: Mode Chaos</a></li>
         </ul>
     </nav>
 
