--- a/page2-css.html
+++ b/page2-css.html
@@ -15,6 +15,7 @@
             <li><a href="index.html">Halaman 1: HTML Doang</a></li>
             <li><a href="page2-css.html" class="active">Halaman 2: HTML + CSS</a></li>
             <li><a href="page3-js.html">Halaman 3: HTML + CSS + JS</a></li>
+            <li><a href="page4-chaos.html">Halaman 4: Mode Chaos</a></li>
         </ul>
     </nav>
 
