--- a/page3-js.html
+++ b/page3-js.html
@@ -17,6 +17,7 @@
             <li><a href="index.html">Halaman 1: HTML Doang</a></li>
             <li><a href="page2-css.html">Halaman 2: HTML + CSS</a></li>
             <li><a href="page3-js.html" class="active">Halaman 3: HTML + CSS + JS</a></li>
+            <li><a href="page4-chaos.html" >Halaman 4: Chaos Mode</a></li>
         </ul>
     </nav>
 
